WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195981
GetCallee does not report the correct type in AI
https://bugs.webkit.org/show_bug.cgi?id=195981
Summary
GetCallee does not report the correct type in AI
Saam Barati
Reported
2019-03-19 18:38:04 PDT
It might not just be a SpecFunction. E.g, eval
Attachments
patch
(1.58 KB, patch)
2019-03-20 14:57 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-03-20 14:57:37 PDT
Created
attachment 365407
[details]
patch
Yusuke Suzuki
Comment 2
2019-03-20 14:58:45 PDT
Comment on
attachment 365407
[details]
patch r=me
WebKit Commit Bot
Comment 3
2019-03-20 17:40:10 PDT
Comment on
attachment 365407
[details]
patch Clearing flags on attachment: 365407 Committed
r243268
: <
https://trac.webkit.org/changeset/243268
>
WebKit Commit Bot
Comment 4
2019-03-20 17:40:11 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-03-20 17:41:36 PDT
<
rdar://problem/49087567
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug