GetCallee does not report the correct type in AI https://bugs.webkit.org/show_bug.cgi?id=195981

Reviewed by Yusuke Suzuki.

I found this as part of my work in:
https://bugs.webkit.org/show_bug.cgi?id=195924

I'm not sure how to write a test for it.

GetCallee was always reporting that the result is SpecFunction. However,
for eval, it may result in just a JSCallee object, which is not a JSFunction.

* dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):


Canonical link: https://commits.webkit.org/210333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243268 268f45cc-cd09-0410-ab3c-d52691b4dbfc